tests/snapshots/execution_spec__graphql-datasource-mutation.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "createUser": {
        "name": "Test Name"
      }
    }
  }
}