tests/snapshots/execution_spec__graphql-datasource-no-args.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "users_list": [
        {
          "name": "Leanne Graham"
        },
        {
          "name": "Ervin Howell"
        }
      ]
    }
  }
}