tests/snapshots/execution_spec__graphql-datasource-no-args.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Query {
  users_list: [User] @graphQL(baseURL: "http://upstream/graphql", name: "users")
}

type User {
  id: Int
  name: String
}
