tests/snapshots/execution_spec__graphql-datasource-with-args.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": "Leanne Graham"
      }
    }
  }
}
