tests/snapshots/execution_spec__graphql-datasource-with-args.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Post {
  id: Int
  user: User
}

type Query {
  post(id: Int): Post
  user(id: Int): User
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
